--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.3.9",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "6.30.0"
   },
   "devDependencies": {
